syntax = "proto3";
package timesman;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service TimesMan {
  rpc GetTimes(google.protobuf.Empty) returns (TimesArray);
  rpc CreateTimes(TimesTitle) returns (Times);
  rpc DeleteTimes(TimesId) returns (google.protobuf.Empty);
  rpc UpdateTimes(Times) returns (Times);

  rpc GetPosts(TimesId) returns (PostArray);
  rpc CreatePost(CreatePostPrams) returns (Post);
  rpc DeletePost(DeletePostParam) returns (google.protobuf.Empty);
  rpc UpdatePost(UpdatePostParam) returns (Post);
}

message PostId { uint64 id = 1; }

message TimesId { uint64 id = 1; }

message TimesArray { repeated Times timeses = 1; }

message PostArray { repeated Post posts = 1; }

message TimesTitle { string title = 1; }

message PostText { string text = 1; }

message CreatePostPrams {
  uint64 id = 1;
  string text = 2;
}

message DeletePostParam {
  uint64 tid = 1;
  uint64 pid = 2;
}

message UpdatePostParam {
  uint64 tid = 1;
  Post post = 2;
}

message Times {
  uint64 id = 1;
  string title = 2;
  google.protobuf.Timestamp created_at = 3;
  optional google.protobuf.Timestamp updated_at = 4;
}

message Post {
  uint64 id = 1;
  string post = 2;
  google.protobuf.Timestamp created_at = 3;
  optional google.protobuf.Timestamp updated_at = 4;
}
